feat: add surefire-plugin